<resources>
    <string name="app_name">Trần Quốc Vương - DH51801674</string>
    <string name="todo">TODO</string>
    <string name="ma_phong">Mã phòng</string>
    <string name="ten">Tên</string>
    <string name="sua">Sửa</string>
    <string name="xoa">Xóa</string>
    <string name="them_nhan_vien">Thêm Nhân Viên</string>
    <string name="quaySo">Quay Số</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="DN">Đăng Nhập</string>
    <string name="TK">Tài khoản</string>
    <string name="Mk">Mật Khẩu:</string>
    <string name="Dn1">Đăng Nhập</string>
    <string name="ch_p1">Chụp</string>
    <string name="ch_n_file1">Chọn File</string>
    <string name="ho_ten">Ho ten :</string>
    <string name="phong">Phong :</string>
    <string name="loai">Loai :</string>
    <string name="dia_chi">Dia Chi :</string>
    <string name="l_u1">Lưu</string>
    <string name="tho_t1">Thoát</string>
    <string name="m_ph_ng">Mã Phòng :</string>
    <string name="t_n_ph_ng">Tên Phòng:</string>
    <string name="qu_n_l_ph_ng">Quản Lý Phòng</string>
    <string name="ch_p">Chụp</string>
    <string name="ch_n_file">Chọn File</string>
    <string name="h_t_n">Họ Tên :</string>
    <string name="ph_ng">Phòng :</string>
    <string name="lo_i_nh_n_vi_n">Loại Nhân Viên :</string>
    <string name="a_ch">Địa chỉ :</string>
    <string name="l_u2">Lưu</string>
    <string name="tho_t2">Thoát</string>
    <string name="t_n_ph_ng1">Tên Phòng :</string>
    <string name="l_u">Lưu</string>
    <string name="tho_t">Thoát</string>
    <string name="id_phong">ID Phong:</string>
    <string name="ten_phong">Ten Phong</string>
    <string name="l_u4">Lưu</string>
    <string name="tho_t4">Thoát</string>
    <string name="th_m_ph_ng5">Thêm Phòng</string>
    <string name="title_activity_map">bản đồ</string>
</resources>