<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtIDPhong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id_phong"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="10pt" />

    <TextView
        android:id="@+id/txtTenPhong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ten_phong"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12pt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSuaPhong"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sua" />

        <Button
            android:id="@+id/btnXoaPhong"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/xoa" />
    </LinearLayout>


</LinearLayout>