<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">


    <ImageView
        android:id="@+id/imgDaiDien"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/todo"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ID: "
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="6pt"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/txtTen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ten"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="6pt" />

        <TextView
            android:id="@+id/txtPhong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ma_phong"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="6pt" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btnSua"
                android:layout_width="108dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/sua" />

            <Button
                android:id="@+id/btnXoaNV"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/xoa" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>