<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="2"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imgHinhAnh"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        tools:srcCompat="@tools:sample/avatars" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <Button
            android:id="@+id/btnChup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ch_p" />

        <Button
            android:id="@+id/btnChonHinh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ch_n_file" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/h_t_n"
            android:textColor="@color/black"
            android:textSize="10pt" />

        <EditText
            android:id="@+id/txtTen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="8pt" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/ph_ng"
            android:textColor="@color/black"
            android:textSize="10pt" />

        <EditText
            android:id="@+id/txtPhong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="8pt" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/lo_i_nh_n_vi_n"
            android:textColor="@color/black"
            android:textSize="10pt" />

        <EditText
            android:id="@+id/txtLoai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="8pt" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/a_ch"
            android:textColor="@color/black"
            android:textSize="10pt" />

        <EditText
            android:id="@+id/txtAdress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="8pt" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnLuu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/l_u" />

        <Button
            android:id="@+id/btnThoat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tho_t" />

    </LinearLayout>

</LinearLayout>